--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ ld_script_ruby.txt
 ld_script_sapphire.txt
 sound/**/*.bin
 sound/songs/midi/*.s
-src/data/items.h
+@src/data/items.h
 src/data/wild_encounters.h
 tags
 tools/agbcc
